<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="se.hagser.mylocationpublisher.SettingsActivity">
    <TextView
        android:layout_width="fill_parent" android:textSize="@dimen/text_size_small"
        android:layout_height="wrap_content" android:text="@string/pref_description_medium_location"/>

    <Switch
    android:id="@+id/detailed_location"
    android:layout_width="fill_parent"
    android:textColor="#888888"
    android:background="#111111"
    android:layout_height="wrap_content" android:text="@string/pref_detailed_location"/>
    <TextView
        android:layout_width="fill_parent" android:textSize="@dimen/text_size_small"
        android:layout_height="wrap_content" android:text="@string/pref_description_detailed_location"/>

    <Switch
        android:id="@+id/minimal_location"
        android:layout_width="fill_parent"
        android:textColor="#888888"
        android:background="#111111"
        android:layout_height="wrap_content" android:text="@string/pref_minimal_location"/>
    <TextView
        android:layout_width="fill_parent" android:textSize="@dimen/text_size_small"
        android:layout_height="wrap_content" android:text="@string/pref_description_minimal_location"/>

</LinearLayout>
